Added Summary to the Pipeline

--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "91f0fc15",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,6 @@
     "import re # Used to generate regex expressions\n",
     "import tensorflow as tf # Import ML functionality\n",
     "from tensorflow.keras.layers import TextVectorization # Creates a vectoriser -> converts tokens into model embeddings\n",
-    "# from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.models import Sequential # Used for creating model based on its layers\n",
     "from tensorflow.keras.layers import Embedding, LSTM, Dense # Functionality for creating specific layers used in model\n",
     "from sklearn.model_selection import train_test_split # Used for creating a train-test split\n",
@@ -33,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "4366b41b",
    "metadata": {},
    "outputs": [
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "5105e189",
    "metadata": {},
    "outputs": [
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "d39d6237",
    "metadata": {},
    "outputs": [
@@ -133,19 +132,19 @@
    "source": [
     "# Prepare data for LSTM\n",
     "\n",
-    "X = data['clean_review'] # Input features, i.e. the reviews that have been preprocessed, so data[clean_review]\n",
+    "X = data['clean_review'] # Input data, i.e. the reviews that have been preprocessed, so data[clean_review]\n",
     "y = data['sentiment'].map({'positive': 1, 'negative': 0}) # Target labels, i.e.: the outcomes so data[sentiment]\n",
-    "                                                          # Maps the sentiment labels in the dataframe (positive and negative) to 0 and 1.\n",
-    "\n",
+    "                                                          # Returns a copy of the sentiment labels in the dataframe by mapping positive and negative to 0 and 1.\n",
     "# Vectoriser\n",
-    "max_words = 10000 # Maximum length of vocabulary\n",
-    "max_len = 200 # Maximum length of output\n",
+    "max_words = 10000 # Maximum length of vocabulary, to save computational resources it only selects 10000 most useful words\n",
+    "max_len = 200 # Maximum length of input, so dimension of embedding vectors is the same as input layer\n",
     "# If the input that is greater than max_len, the text is truncated (cut down to max_len)\n",
     "# If the input is less than max_len, the text is padded (use filler characters to increase length to max_len)\n",
     "\n",
     "# Implement a vectoriser using the TextVectorization Library\n",
     "# max_tokens represents the maximum size of the vocabulary, i.e.: max_words so 10000 words\n",
-    "# output_sequence_length sets the length of the output sequence to a specific length, i.e.: max_len so 200 words\n",
+    "# sequence length sets the length of the input sequence to a specific length, i.e.: max_len so 200 words\n",
+    "# Generates tokens and converts them to word vectors (not embeddings yet)\n",
     "vectoriser = TextVectorization(max_tokens=max_words, output_sequence_length=max_len)\n",
     "\n",
     "# Train-Test Split\n",
@@ -153,19 +152,20 @@
     "# Test set is the set used to evaluate a final model accurately (not part of the training set).\n",
     "# 20% of data is the test set so test_size is 0.2.\n",
     "# random_state is set to a number so that the splits generated are reproducible; otherwise the split would be generated randomly (a seed value)\n",
-    "# Raw data means the data that has been preprocessed but has not be \n",
+    "# Raw data means the data that has been preprocessed but not converted to embeddings\n",
     "X_train_raw, X_test_raw, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "vectoriser.adapt(X_train_raw) # Creates a vocabulary (collection of frequent terms) of string terms from tokens in the X_train_raw data\n",
     "\n",
-    "# Vectorize AFTER splitting -> \n",
+    "# Vectorize AFTER splitting -> this prevents data leakage so the model cannot learn patterns from the test data vocabulary and artificially boost the performance of the model. \n",
     "X_train = vectoriser(X_train_raw) # Applies vectoriser to X_train_raw\n",
-    "X_test = vectoriser(X_test_raw) # Applies vectoriser to X_test_raw"
+    "X_test = vectoriser(X_test_raw) # Applies vectoriser to X_test_raw\n",
+    "# The results are word vectors (words replaced with indices of where they appear in vocabulary)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "dd8edcc2",
    "metadata": {},
    "outputs": [],
@@ -175,18 +175,18 @@
     "model = Sequential() # Model should be sequential so that it is created layer by layer\n",
     "\n",
     "# Embedding layer added\n",
-    "# This layer converts the high-dimensional tokenised text into a low-dimensional vector\n",
-    "# The input dimension in this case is the maximum tokens in our input, so 10000.\n",
-    "# The output dimension is the dimension the vector should be\n",
+    "# This layer converts each word/token index (from the vocabulary) into a low-dimensional embedding vectors\n",
+    "# The input dimension is the maximum possible word index, in other words, the size of the vocabulary: max_words = 10000\n",
+    "# The output dimension is the dimension of the embedding vector for a word/token, 128\n",
     "model.add(Embedding(input_dim=max_words, output_dim=128))\n",
     "\n",
     "# LSTM layer added\n",
-    "# 128 units -> this represents the dimensionality of the output space.\n",
-    "# dropout = 0.2 means that 20% of units would be dropped for the linear transformation of the inputs.\n",
-    "# recurrent_dropout = 0.2 implies that 20% of units will be dropped for linear transformations in the recurrent states.\n",
-    "model.add(LSTM(128, dropout=0.2, recurrent_dropout=0.2))\n",
+    "# 256 is the number of LSTM neurons\n",
+    "# dropout = 20% of the neuron connections are deactivated in this layer to prevent overfitting\n",
+    "# recurrent_dropout = 20% of the recurrent connections (weighted activations from last word/timestep) are deactivated in this layer to prevent overfitting\n",
+    "model.add(LSTM(256, dropout=0.2, recurrent_dropout=0.2))\n",
     "\n",
-    "# Dense layer added to feed all outputs from the previous layer to all neurons\n",
+    "# Output layer is a dense layer (fully connected to previous layer).\n",
     "# In this case, this layer has 1 neuron and uses a sigmoid activation function.\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
     "\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "id": "6287817c",
    "metadata": {},
    "outputs": [
@@ -206,24 +206,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "\u001b[1m563/563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m75s\u001b[0m 128ms/step - accuracy: 0.5694 - loss: 0.6760 - val_accuracy: 0.6133 - val_loss: 0.6700\n",
+      "\u001b[1m563/563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m185s\u001b[0m 329ms/step - accuracy: 0.5218 - loss: 0.6927 - val_accuracy: 0.5433 - val_loss: 0.6802\n",
       "Epoch 2/5\n",
-      "\u001b[1m563/563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m80s\u001b[0m 142ms/step - accuracy: 0.6332 - loss: 0.6436 - val_accuracy: 0.6463 - val_loss: 0.6390\n",
+      "\u001b[1m563/563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m180s\u001b[0m 320ms/step - accuracy: 0.5755 - loss: 0.6720 - val_accuracy: 0.5608 - val_loss: 0.6758\n",
       "Epoch 3/5\n",
-      "\u001b[1m563/563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m70s\u001b[0m 124ms/step - accuracy: 0.7308 - loss: 0.5461 - val_accuracy: 0.8468 - val_loss: 0.3734\n",
+      "\u001b[1m563/563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m182s\u001b[0m 323ms/step - accuracy: 0.7244 - loss: 0.5420 - val_accuracy: 0.8545 - val_loss: 0.3456\n",
       "Epoch 4/5\n",
-      "\u001b[1m563/563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m70s\u001b[0m 124ms/step - accuracy: 0.8712 - loss: 0.3172 - val_accuracy: 0.8730 - val_loss: 0.3071\n",
+      "\u001b[1m563/563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m187s\u001b[0m 332ms/step - accuracy: 0.8798 - loss: 0.2941 - val_accuracy: 0.8725 - val_loss: 0.2995\n",
       "Epoch 5/5\n",
-      "\u001b[1m563/563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m69s\u001b[0m 123ms/step - accuracy: 0.9081 - loss: 0.2366 - val_accuracy: 0.8773 - val_loss: 0.3167\n"
+      "\u001b[1m563/563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m195s\u001b[0m 346ms/step - accuracy: 0.9170 - loss: 0.2177 - val_accuracy: 0.8752 - val_loss: 0.3450\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x22bb84ac4a0>"
+       "<keras.src.callbacks.history.History at 0x22c5e21e060>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "0539d4a0",
    "metadata": {},
    "outputs": [
@@ -247,12 +247,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 26ms/step\n",
-      "Accuracy: 0.8749\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 24ms/step\n",
+      "Accuracy: 0.8698\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.87      0.88      0.87      4961\n",
-      "           1       0.88      0.87      0.87      5039\n",
+      "           0       0.84      0.91      0.87      4961\n",
+      "           1       0.90      0.83      0.87      5039\n",
       "\n",
       "    accuracy                           0.87     10000\n",
       "   macro avg       0.87      0.87      0.87     10000\n",
@@ -264,8 +264,9 @@
    "source": [
     "# Evaluate Model\n",
     "\n",
-    "y_pred_prob = model.predict(X_test) # Creates a probability based on model predictions from X_test\n",
-    "y_pred = (y_pred_prob > 0.5).astype(int)\n",
+    "y_pred_prob = model.predict(X_test) # Creates a probability matrix based on model predictions from X_test\n",
+    "y_pred = (y_pred_prob > 0.5).astype(int) # Creates a boolean matrix based on the labels from y_pred_prob.\n",
+    "                                         # Probabilities greater than 0.5 in the matrix correspond to 1 and the rest correspond to 0\n",
     "\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred)) # Generates accuracy by comparing y_test (target labels) from y_pred (model prediction of the target labels)\n",
     "print(classification_report(y_test, y_pred)) # Generates classification report that uses different performance metrics such as precision, recall, f1-score and support"
@@ -273,30 +274,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "fc7311cc",
+   "execution_count": null,
+   "id": "51912b7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Making Predictions\n",
+    "# Summary\n",
     "\n",
-    "# while True:\n",
-    "#     user_input = input(\"Enter a movie review (or type 'exit' to quit): \\n\")\n",
-    "#     if user_input.lower() == 'exit':\n",
-    "#         break\n",
+    "# Import Libraries: pandas, numpy, re, tensorflow and sk-learn\n",
     "\n",
-    "#     # Preprocess text\n",
-    "#     cleaned_input = clean_text(user_input)\n",
+    "# 1.  Read data from csv file\n",
     "\n",
-    "#     # Vectorise text (already tokenised and padded to max_len)\n",
-    "#     input_seq = vectoriser([cleaned_input])\n",
+    "# 2.  Preprocess data and create a new data frame column to store the preprocessed data\n",
+    "        # Main steps include converting to lowercase and removing HTML tags, non-letter characters and whitespace.\n",
     "\n",
-    "#     # Predict\n",
-    "#     prediction = model.predict(input_seq)[0][0]\n",
-    "#     sentiment = \"Positive\" if prediction > 0.5 else \"Negative\"\n",
+    "# 3.  Set your input values and target labels (remember to map target labels into numbers).\n",
     "\n",
-    "#     print(f\"\\nPredicted Sentiment: {sentiment}\")\n",
-    "#     print(f\"Confidence: {prediction:.2f}\\n\")"
+    "# 4.  Create variables for your vectoriser: max_words, max_len.\n",
+    "\n",
+    "# 5.  Create vectoriser with the parameters: max_tokens, output_sequence_length.\n",
+    "\n",
+    "# 6.  Create train-test split: remember test_size and random_state and that X for this is raw data.\n",
+    "\n",
+    "# 7.  Adapt vectoriser so it creates a vocabulary.\n",
+    "\n",
+    "# 8.  Set X_train and X_test by using the vectoriser.\n",
+    "\n",
+    "# 9.  Create a model by doing the following:\n",
+    "        # 1. Make model sequential.\n",
+    "        # 2. Add embedding layer (with parameters input_dim and output_dim).\n",
+    "        # 3. Create LSTM layer (with parameters: number of neurons, dropout and recurrent dropout).\n",
+    "        # 4. Add output/dense layer (with parameters number of neurons and activation).\n",
+    "        # 5. Compile model by using loss, optimiser and metrics as parameters.\n",
+    "\n",
+    "# 10. Train model with parameters: epochs, batch size and validation split\n",
+    "\n",
+    "# 11. Create two variables: y_pred_prob and y_pred.\n",
+    "\n",
+    "# 12. Use y_pred_prob and y_pred to compare with y_test in terms of accuracy score and classification report.\n"
    ]
   }
  ],
